feat: run the server on macOS, and configure it from the command line
## macOS

App 380870 ships a macOS depot, 380872, alongside the Linux one, and it is a
native arm64 build: an arm64 Azul Zulu JRE under jre/Contents/Home and
universal x86_64+arm64 JNI natives in natives/. No Rosetta is involved. The
shared 380871 depot is reused unchanged, so a Mac fetches 205M on top of the
~6.9G both platforms already need.

`default.nix` now keys the platform half off the system rather than
hard-coding the Linux depot, and the wrapper branches with it: the JVM path,
the natives directory, the library-path variable and the collector all differ,
and the argument list follows upstream's own launcher on each platform.
`dontStrip` is set on darwin — every Mach-O in that depot is signed, ad-hoc on
the natives and an Azul certificate on the JRE, and strip invalidates it.

Three things this needed that were not obvious:

DepotDownloader cannot fetch inside a Nix build on darwin, unpatched.
AccountSettingsStore opens an IsolatedStorageFile in a static field, so it is
constructed before Main reads a flag, and on macOS .NET resolves the home
directory from passwd rather than from $HOME — a build user's is /var/empty,
so it throws and aborts. That is why fetch-steam's HOME=$(mktemp -d) works on
Linux and does nothing here. The overlay patches those three calls to plain
files, darwin-only; the store only ever cached credentials for a login this
makes anonymously in a build directory that is then discarded.

There is no Steam networking on macOS. Depot 1005, the macOS Steamworks
redist, is not available to an anonymous Steam account, so there is no
steamclient.dylib to ship and -Dzomboid.steam defaults to 0 there. The server
runs on libZNetNoSteam.dylib: it works and keeps saves, but never registers
with the master server, so players reach it by direct connection only.
ZOMBOID_STEAMCLIENT_DIR plus --steam turns it back on for a host with its own
copy, without a rebuild.

There is no x86_64-